--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,155 @@
-.App {
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  background: #eee;
+}
+
+.wrapper {
+  max-width: 580px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  padding: 1rem;
+  margin: 0 auto;
+}
+
+.main-heading {
+  color: #212121;
+  text-transform: capitalize;
+  margin-bottom: 0.5rem;
+}
+.sub-text {
+  color: #424242;
+  font-size: 15px;
+}
+
+.form-wrapper {
+  width: 100%;
   text-align: center;
+  padding: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-field {
+  display: flex;
+  flex-flow: column;
+  align-items: flex-start;
+  width: 100%;
+  padding: 0.5rem 0rem;
+}
+.input-field label {
+  color: rgb(133, 133, 133);
+  font-size: 14px;
+}
+.input-field input {
+  width: 100%;
+  padding: 0.75rem;
+  border-radius: 13px;
+  outline: none;
+  background: #ffff;
+  border: 2px solid #ccc;
+  margin-top: 0.5rem;
+  color: #000;
+  font-family: inherit;
+}
+input:focus {
+  border: 2px solid #2193b0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-wrapper button,
+.main-button {
+  background: linear-gradient(to right, #2193b0, #6dd5ed);
+  color: #fff;
+  width: 100%;
+  padding: 0.75rem;
+  font-weight: 600;
+  font-family: inherit;
+  margin-top: 0.75rem;
+  outline: none;
+  border: none;
+  border-radius: 13px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.form-wrapper button:hover {
+  opacity: 0.9;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bottom-message {
+  width: 100%;
+  text-align: center;
+  color: #ccc;
+  margin-top: 2rem;
+}
+.bottom-message h5 {
+  font-weight: 400;
+}
+.bottom-message h5 a {
+  color: #fff;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.main-div {
+  width: 100vw;
+  height: 100vh;
+  background-color: whitesmoke;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+h2 {
+  font-size: 30px;
+  color: #0f0f0f;
+
+  text-shadow: 0px 11px 10px rgba(138, 133, 117, 0.8);
+
+  margin-bottom: 50px;
+}
+
+.otp-field {
+  height: 50px;
+  width: 50px;
+  margin-right: 10px;
+  font-size: 20px;
+  color: darkgray;
+}
+
+.otp-data {
+  color: gray;
+}
+
+.button-div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.button-div button {
+  font-size: 16px;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 5px 5px 5px grey;
+}
+
+.button-div .clr-btn {
+  background-color: #4caf50;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-div .verify-btn {
+  background-color: #f44336;
+  color: white;
 }
